--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
    
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -42,13 +45,13 @@
         </div>
       </div>
     </nav>
-    <!-- Akhir Navba r-->
+    <!-- Akhir Navbar-->
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/revy.png" alt="Revy Nanda Rosalvin" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Revy Nanda Rosalvin</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -68,10 +71,10 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" >
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores repudiandae quas incidunt accusantium possimus soluta?</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="fade-left" data-aos-delay="200">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto corporis nesciunt fuga velit. Dolor eligendi quis sequi, cum alias doloremque.</p>
             </div>
           </div>
@@ -91,7 +94,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card"  data-aos="flip-left" data-aos-duration="500">
                         <img src="img/projects/1.jpg" class="card-img-top" alt="Project 1">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -99,7 +102,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card"  data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
                         <img src="img/projects/2.jpg" class="card-img-top" alt="Project 2">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -107,7 +110,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card"  data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
                         <img src="img/projects/3.jpg" class="card-img-top" alt="Project 3">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -115,7 +118,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card"  data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
                         <img src="img/projects/4.jpg" class="card-img-top" alt="Project 4">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -123,7 +126,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card"  data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
                         <img src="img/projects/5.jpg" class="card-img-top" alt="Project 5">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -131,7 +134,7 @@
                       </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card">
+                    <div class="card"  data-aos="flip-left" data-aos-duration="500" data-aos-delay="500">
                         <img src="img/projects/6.jpg" class="card-img-top" alt="Project 6">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -143,6 +146,72 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,288L48,261.3C96,235,192,181,288,144C384,107,480,85,576,112C672,139,768,213,864,218.7C960,224,1056,160,1152,144C1248,128,1344,160,1392,176L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir Projects -->
+    <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+              <h2>Gallery</h2>
+          </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/1.png" alt="Gambar 1" class="img-fluid gallery-img"/>
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/2.png" alt="Gambar 2" class="img-fluid gallery-img" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/3.png" alt="Gambar 3" class="img-fluid gallery-img" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/4.png" alt="Gambar 4" class="img-fluid gallery-img" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/5.png" alt="Gambar 5" class="img-fluid gallery-img" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/6.png" alt="Gambar 6" class="img-fluid gallery-img" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/7.png" alt="Gambar 7" class="img-fluid gallery-img" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/8.png" alt="Gambar 8" class="img-fluid gallery-img" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/9.png" alt="Gambar 9" class="img-fluid gallery-img" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="#">
+            <img src="img/gallery/thumbnail/10.png" alt="Gambar 10" class="img-fluid gallery-img" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+      <!-- Akhir Projects -->
+    <!-- Galley -->
+
+
+
 
     <!-- Contact -->
     <section id="contact">
@@ -186,12 +255,40 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-3 justify-content-center">
-        <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https:/www.instagram.com/revynanda" class="text-white fw-bold">Revy Nanda Rosalvin</a></p>
+        <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="http://www.instagram.com/revynanda" class="text-white fw-bold">Revy Nanda Rosalvin</a></p>
     </footer>
     <!-- Akhir Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll('.gallery-img');
+
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = 'fade-down';
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+
+      AOS.init({
+        once: true,
+        duration: 2000,
+      });
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.lead', {duration: 2, delay: 1, text: 'Revy adalah Raja hahahaha'});
+      gsap.from('.jumbotron img', {duration: 1, rotateY:360, opacity: 0});
+      gsap.from('.navbar', { duration: 1.5, y: '-100%', opacity: 0, ease: 'bounce'});
+      gsap.from('.display-4', { duration: 1, x: -50, opacity: 0, delay: 0.7, ease: 'back'});
+    </script>
+
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbxsB9lvl2y8V4dXQwrmtD29goeZKhzfUiqTNHUYpEqJdmZezA9b3QhG4FHtL-mN_0t7LQ/exec';
       const form = document.forms['rnr-contact-form'];
